Added link to API documentation

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
     <title>Cafe&Wifi API</title>
 </head>
 <body>
-    <h1>Welcome to the Cafe & Wifi API</h1>
+    <h1>Welcome to the Cafe & Wifi API <a href="https://documenter.getpostman.com/view/15040060/UVXjJvQ4">View documentation</a></h1>
 </body>
 </html>
